--- a/CS174FINALPROJECTLITSCHER/Areas/Admin/Views/Product/Edit.cshtml
+++ b/CS174FINALPROJECTLITSCHER/Areas/Admin/Views/Product/Edit.cshtml
@@ -25,7 +25,7 @@
 		</div>
 
 		<div class="form-group">
-			<label asp-for="ImageFile">Description</label>
+			<label asp-for="ImageFile">Image File</label>
 			<input asp-for="ImageFile" class="form-control">
 		</div>
 
